--- a/IOT_Project/IOT_Project.ioc
+++ b/IOT_Project/IOT_Project.ioc
@@ -24,26 +24,27 @@ Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB1
-Mcu.Pin11=PB2
-Mcu.Pin12=PB14
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=PB3
-Mcu.Pin16=PB4
-Mcu.Pin17=PB5
-Mcu.Pin18=VP_SYS_VS_tim2
-Mcu.Pin19=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin10=PB0
+Mcu.Pin11=PB1
+Mcu.Pin12=PB2
+Mcu.Pin13=PB14
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PB3
+Mcu.Pin17=PB4
+Mcu.Pin18=PB5
+Mcu.Pin19=VP_SYS_VS_tim2
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin20=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin5=PA0-WKUP
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PA5
-Mcu.Pin9=PB0
-Mcu.PinsNb=21
+Mcu.Pin5=PC3
+Mcu.Pin6=PA0-WKUP
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA5
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -116,6 +117,11 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC3.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PC3.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PC3.GPIO_PuPd=GPIO_NOPULL
+PC3.Locked=true
+PC3.Signal=GPIO_Output
 PH0\ -\ OSC_IN.Locked=true
 PH0\ -\ OSC_IN.Mode=HSE-External-Clock-Source
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
