--- a/IOT_Project/IOT_Project.ioc
+++ b/IOT_Project/IOT_Project.ioc
@@ -53,6 +53,7 @@ MxCube.Version=6.12.0
 MxDb.Version=DB.6.0.120
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -107,9 +108,6 @@ PB4.Locked=true
 PB4.Signal=GPIO_Output
 PB5.Locked=true
 PB5.Signal=GPIO_Output
-PC13-ANTI_TAMP.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PC13-ANTI_TAMP.GPIO_Label=B1 [Blue PushButton]
-PC13-ANTI_TAMP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC13-ANTI_TAMP.Locked=true
 PC13-ANTI_TAMP.Signal=GPXTI13
 PC14-OSC32_IN.Locked=true
