feat: implement memory functionality

--- a/IOT_Project/IOT_Project.ioc
+++ b/IOT_Project/IOT_Project.ioc
@@ -108,6 +108,8 @@ PB4.Locked=true
 PB4.Signal=GPIO_Output
 PB5.Locked=true
 PB5.Signal=GPIO_Output
+PC13-ANTI_TAMP.GPIOParameters=GPIO_ModeDefaultEXTI
+PC13-ANTI_TAMP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC13-ANTI_TAMP.Locked=true
 PC13-ANTI_TAMP.Signal=GPXTI13
 PC14-OSC32_IN.Locked=true
